@@ -28,7 +28,7 @@ public:
 
     virtual Ice::ObjectPtr locate(const Ice::Current&, Ice::LocalObjectPtr&) { return 0; }
     virtual void finished(const Ice::Current&, const Ice::ObjectPtr&, const Ice::LocalObjectPtr&) {}
-    virtual void deactivate() {}
+    virtual void deactivate(const string&) {}
 };
 
 class ObjectFactoryI : virtual public Ice::ObjectFactory
