@@ -1,6 +1,9 @@
 Changes since version 1.1.0
 ---------------------------
 
+- Changed Ice::ServantLocator::deactivate to be passed the category for
+  which a servant locator is being deactivated.
+
 - Added --noindex option to slice2docbook to suppress generation of index
   pages for pdf version of documentation.
 
